gale: overlay: Define fingerprint locations
*Fix fingerprint position
*Import power_profile.xml

--- a/overlay/FrameworksResOverlayGale/res/values/config.xml
+++ b/overlay/FrameworksResOverlayGale/res/values/config.xml
@@ -284,6 +284,22 @@
         <item>0:2:15</item> <!-- ID0:Fingerprint:Strong -->
     </string-array>
 
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
+
+    <!-- An array of arrays of side fingerprint sensor properties relative to each display.
+         Note: this value is temporary and is expected to be queried directly
+         from the HAL in the future. -->
+    <array name="config_sfps_sensor_props" translatable="false">
+         <item>@array/config_sfps_sensor_props_main</item>
+    </array>
+     
+    <array name="config_sfps_sensor_props_main" translatable="false">
+         <item></item> <!-- Display ID -->
+         <item>681</item> <!-- Sensor X Location -->
+         <item>749</item> <!-- Sensor Y Location -->
+         <item>145</item> <!-- Sensor Radius -->
+    </array>
 
     <!-- An array of floats describing the screen brightness in nits corresponding to the backlight
          values in the config_screenBrightnessBacklight array.  On OLED displays these  values
