--- a/overlay/SystemUIOverlayGale/res/values/config.xml
+++ b/overlay/SystemUIOverlayGale/res/values/config.xml
@@ -20,4 +20,11 @@
 
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
+
+    <!-- Location on the screen of the center of the fingerprint sensor. For devices with under
+     display fingerprint sensors, this directly corresponds to the fingerprint sensor's location.
+     For devices with sensors on the back of the device, this corresponds to the location on the
+     screen directly in front of the sensor. -->
+    <dimen name="physical_fingerprint_sensor_center_screen_location_x">681px</dimen>
+    <dimen name="physical_fingerprint_sensor_center_screen_location_y">749px</dimen>
 </resources>
